# sora-flutter-sdk

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  analysis_options.yaml  build.yaml  dartdoc_options.yaml  pubspec.yaml
.github/: renovate.json
.github/workflows/: build.yaml  test.yaml
android/: .gitignore  build.gradle  get_llvm.sh  install_deps.py  install_deps.sh  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/src/main/kotlin/jp/shiguredo/sora_flutter_sdk/: EventChannelHandler.kt  RunOnMainThread.kt  SoraFlutterSdkPlugin.kt
example/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle  proguard-rules.pro
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sora_flutter_sdk_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: environment.example.dart  main.dart
example/linux/: .gitignore  CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
integration_test_app/: README.md  app-run.ps1  pubspec.yaml
integration_test_app/android/app/: build.gradle
integration_test_app/integration_test/: app_test.dart  connect_test.dart
integration_test_app/ios/: Podfile
integration_test_app/ios/Runner/: Info.plist
integration_test_app/ios/Runner.xcodeproj/: project.pbxproj
integration_test_app/lib/: config.dart  environment.example.dart  main.dart
integration_test_app/lib/integration_test/: connect_test.dart  integration_test.dart
integration_test_app/lib/test/: event.dart  event_controller.dart  event_stream.dart
integration_test_app/linux/: CMakeLists.txt
integration_test_app/macos/Runner/: Info.plist
integration_test_app/macos/Runner/Configs/: AppInfo.xcconfig
integration_test_app/windows/: CMakeLists.txt
integration_test_app/windows/runner/: Runner.rc
ios/: sora_flutter_sdk.podspec
ios/Classes/: SoraBase.h  SoraClientWrapper.mm  SoraFlutterMessageHandler.h  SoraFlutterSdkPlugin.h  SoraFlutterSdkPlugin.m  SoraUtils.h  SoraUtils.mm  SwiftSoraFlutterSdkPlugin.swift
ios/Classes/cpp/: sora_event_channel.h  sora_event_channel.mm  sora_ios_audio_init.h  sora_ios_audio_init.mm  sora_standard_method_codec.h  sora_standard_method_codec.mm  sora_texture.h  sora_texture.mm  sora_texture_registry.h  sora_texture_registry.mm
ios/src/: config_reader.h  sora_client.cpp  sora_client.h  sora_renderer.cpp
lib/: sora_client.dart  sora_flutter_sdk.dart  sora_flutter_sdk_method_channel.dart  sora_flutter_sdk_platform_interface.dart
lib/src/: client.dart  client.g.dart  device_list.dart  lyra.dart  method_channel.dart  platform_interface.dart  renderer.dart  sdk.dart  version.dart  video_track.dart
linux/: CMakeLists.txt  install_deps.sh  install_jetson_deps.sh  sora_flutter_sdk_plugin.cc
linux/include/sora_flutter_sdk/: sora_flutter_sdk_plugin.h
macos/: sora_flutter_sdk.podspec
macos/Classes/: SoraClientWrapper.h  SoraFlutterMessageHandler.h  SoraFlutterMessageHandler.mm  SoraFlutterSdkPlugin.swift  SoraUtils.h
macos/src/: blank_video_capturer.cpp  blank_video_capturer.h  device_list.cpp  device_list.h  sora_renderer.cpp  sora_renderer.h
scripts/: create_env.sh
scripts/apple/: config.sh  setup.sh  setup_ios.sh  setup_macos.sh
scripts/windows/: create_env.ps1
src/: blank_video_capturer.cpp  blank_video_capturer.h  config_reader.h  device_list.cpp  device_list.h  sora_client.cpp  sora_client.h  sora_renderer.cpp  sora_renderer.h
src/apple/: SoraBase.h  SoraClientWrapper.h  SoraClientWrapper.mm  SoraFlutterMessageHandler.h  SoraFlutterMessageHandler.mm  SoraUtils.h  SoraUtils.mm
src/apple/cpp/: sora_event_channel.h  sora_event_channel.mm  sora_ios_audio_init.h  sora_ios_audio_init.mm  sora_standard_method_codec.h  sora_standard_method_codec.mm  sora_texture.h  sora_texture.mm  sora_texture_registry.h  sora_texture_registry.mm
test/: sora_flutter_sdk_method_channel_test.dart  sora_flutter_sdk_test.dart
windows/: CMakeLists.txt  sora_flutter_sdk_plugin.cpp  sora_flutter_sdk_plugin.h  sora_flutter_sdk_plugin_c_api.cpp
windows/include/sora_flutter_sdk/: sora_flutter_sdk_plugin_c_api.h
